Getting closer. I should just get the rest of the css done tonight and worry about the huge data bog down tomorrow or something.

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -8,8 +8,7 @@
         "scripts/vendor/devloft/behaviors/*.js",
         "scripts/vendor/devloft/behaviorGroups/*.js",
         "scripts/app.js",
-        "scripts/data/logs.js",
-        "scripts/data/users.js",
+        "scripts/data/*.js",
         "scripts/models/log_model.js",
         "scripts/collections/log_collection.js",
         "scripts/models/impression_model.js",
